[package]
name = "which-exe"
version = "0.1.0"
authors = ["Graham Ollis <plicease@cpan.org>"]
edition = "2018"

[[bin]]
name = "which"
path = "src/which/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "3.1.0"
getopts = "0.2"